# teatype

./: .env.template  .gitattributes  .gitignore  .project  LICENSE  README.md  priotodo  requirements.txt  tmp
py/: pyproject.toml  setup.py
py/requirements/: base.txt  build.txt  django-support.txt  fastapi-support.txt  gpu.txt  test.txt
py/teatype/: __init__.py
py/teatype/ai/: OpenGPT.py  __init__.py
py/teatype/ai/clients/: BaseAIClient.py  LLMClient.py  __init__.py
py/teatype/ai/engines/: BaseAIEngine.py  LLMEngine.py  __init__.py
py/teatype/ai/llm/: __init__.py  inference.py  loader.py  tokenizer.py
py/teatype/auxdb/: __init__.py
py/teatype/cli/: BaseCLI.py  BaseInstallCLI.py  BaseIsRunningCLI.py  BaseStartCLI.py  BaseStopCLI.py  BaseTUI.py  MainCLI.py  __init__.py
py/teatype/cli/args/: Action.py  Argument.py  Command.py  Flag.py  __init__.py
py/teatype/comms/: __init__.py  url.py
py/teatype/comms/http/: __init__.py  deadpoint.py  response.py  responses.py  routing.py  trequest.py  tresponse.py
py/teatype/db/: __init__.py
py/teatype/enum/: __init__.py
py/teatype/forma/: __init__.py  base_forma.py  base_transformer.py
py/teatype/hsdb/: HSDB.py  HSDBModel.py  HSDBRelation.py  RawFileHandler.py  RawFileStructure.py
py/teatype/hsdb_legacy/: HSDBAttribute.py  HSDBMigration.py  HSDBModel.py  HSDBQuery.py  HSDBRelation.py  HybridStorage.py  IndexDatabase.py  RawFileHandler.py  RawFileStructure.py  __init__.py
py/teatype/io/: __init__.py  dict.py  env.py  fetch.py  file.py  list.py  liveterm.py  path.py  print.py  probe.py  prompt.py  shell.py  softkill.py  struct.py  tempdir.py
py/teatype/logging/: __init__.py  logging.py
py/teatype/modulo/: __init__.py  base_units.py  launchpad.py  operations.py
py/teatype/toolkit/: Timely.py  Timer.py  __init__.py  classproperty.py  colorwrap.py  dt.py  fastjson.py  generate_id.py  implemented_trap.py  kebabify.py  singleton.py  staticproperty.py  stopwatch.py
py/tests/: test_dict_tree.py  test_fastjson.py  test_index_database_sample_usage.py  test_modulo.py  test_redis.py
py/tests/ai/: test_chat_with_ai_engine.py
py/tests/ci-cd/: test_comms.py
py/tests/integration/: test_fastjson.py  test_modulo.py  test_redis.py  test_redis_response.py  test_socket_client.py  test_socket_server.py  test_tui.py
(+809 files in other folders)
